nightmare working but using a map, not a graph

--- a/us_states.html
+++ b/us_states.html
@@ -44,7 +44,7 @@
 
       queue()
           .defer(d3.json, 'data.json')
-          .defer(d3.json, 'us-states.json')
+          .defer(d3.json, 'maped-us-states.json')
           .await(makeMap)
 
       function makeMap(error, data_1,gjson_1) {
